Remove duplicate definition of "specfs_lock". Patch provided by Juan RP in PR kern/39493.